# face_unlock_systemd

./: .gitignore  README.md
POC/: capture_image.py  main.py  test_main.py  train_model.py
POC/systemd/: create_and_run_systemd.py  face_unlock_systemd.service  start_face_unlock.sh
app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  backend_api.py
app/recognition/: capture_image.py  train_model.py
